--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,14 @@ project(ray-tracer LANGUAGES CXX)
 
 add_executable(ray-tracer 
   main.cpp  
+  ray.cpp  
+  canvas.cpp  
+  camera.cpp  
 )
-
-target_compile_options(ray-tracer PRIVATE /Wall /WX)
-
+ 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 target_compile_features(ray-tracer PUBLIC cxx_std_20)
+
+target_include_directories(ray-tracer PUBLIC glm)
